deployment/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: boubakera/skill_match:main
        command: ["uv", "run", "python", "-m", "uvicorn", "app.api:app",
                  "--host", "0.0.0.0", "--port", "8000"]
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
