deployment/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: boubakera/skill_match
        command: ["uv", "run", "streamlit", "run", "app/app.py",
                  "--server.address", "0.0.0.0", "--server.port", "8501",
                  "--server.fileWatcherType", "none"]
        imagePullPolicy: Always
        ports:
        - containerPort: 8501
