deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skill-match-service
spec:
  selector:
    app: skill-match
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
