deployment/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  selector:
    app: ui
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
